--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "symfony/routing": "^4.3",
-        "symfony/http-foundation": "^4.3"
+        "symfony/http-foundation": "^4.3",
+        "symfony/finder": "^4.3",
+        "symfony/yaml": "^4.3"
     }
 }
