--- a/composer.json
+++ b/composer.json
@@ -4,4 +4,8 @@
         "symfony/http-foundation": "^4.3",
         "symfony/yaml": "^4.3"
     }
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
 }
